--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <a href="/">Home Page</a>
+    <br>
+    <a href="/signup">Sign up</a>
+    <br>
+    <a href="/login">login</a>
 
     {{{body}}}
 
